// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<button
  className="components-button-index-m__default components-button-index-m__button"
  onClick={[Function]}
  type="button"
>
  <span
    className="components-button-index-m__content"
  >
    <div
      id="child"
    />
  </span>
</button>
`;

exports[`should render correctly when disabled 1`] = `
<button
  className="components-button-index-m__disabled components-button-index-m__button"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="components-button-index-m__content"
  >
    <div
      id="child"
    />
  </span>
</button>
`;

exports[`should render correctly when submitting 1`] = `
<button
  className="components-button-index-m__submitting components-button-index-m__button"
  onClick={[Function]}
  type="button"
>
  <span
    className="components-button-index-m__content"
  >
    <div
      id="child"
    />
  </span>
  <Loader
    size="medium"
    type="inverse"
  />
</button>
`;
